<resources>
    <string name="app_name">KhalidApp</string>
    <string name="start">Start</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_logo">Main Logo</string>
    <string name="login">Login</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="register">Register</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_name">Your Name</string>
    <string name="your_age">Your Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sign_out">Sign out</string>
</resources>